--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header>
         <h1>Lista de Tarefas</h1>
         <nav>
+            <a href="teste.html">TEste</a>
             <a href="servicos.html">Servicos</a>
             <a href="sobre.html">Sobre</a>
         </nav>
