--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <header>
         <h1>Lista de Tarefas</h1>
         <nav>
-            <a href="teste.html">TEste</a>
+            <a href="contato.html">Contato</a>
+            <a href="links-uteis.html">Links úteis</a>
             <a href="servicos.html">Servicos</a>
             <a href="sobre.html">Sobre</a>
         </nav>
